--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -153,6 +153,22 @@ services:
       retries: 3
       start_period: 10s
 
+  postgresql:
+      image: postgres:15
+      container_name: postgres
+      environment:
+        POSTGRES_USER: myuser       
+        POSTGRES_PASSWORD: mypassword 
+        POSTGRES_DB: mydatabase       
+      ports:
+        - "5432:5432"               
+      volumes:
+        - postgres_data:/var/lib/postgresql/data
+        - ./postgresql:/etc/postgresql
+      command: postgres -c 'config_file=/etc/postgresql/postgresql.conf'
+      networks:
+        - kafka
+
   clickhose:
     image: clickhouse/clickhouse-server
     container_name: clickhouse
